src/objects/Debug_Logs__c.object
<CustomObject>
    <fields>
        <fullName>Debug_DateTime__c</fullName>
        <label>Debug DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Json_Response_Kaybus__c</fullName>
        <label>Json Response Kaybus</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Exception__c</fullName>
        <label>Type of Exception</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Kaybus Debug Logs</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Debug Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kaybus Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>